# utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  lc.h
cmake/: library.cmake  settings.cmake
include/: functional_style_utils.h  graphic.h  logger.h  macro.h  printer.h  string_utilities.h
src/: CMakeLists.txt  graphic.cpp
test/: CMakeLists.txt  graphicTest.cpp  graphicTest2.cpp  printTest.cpp
